# Methods

./: README.md  pyproject.toml
methods/: hooks.py  patches.txt
methods/methods/: __init__.py  amazon_repository.py  amazon_sp_api_settings.py  api.py  auto_email_report.py  digital_signature.py
methods/methods/custom/: amazon_sp_api_settings.json  auto_email_report.json  delivery_note.json  item.json  packed_item.json  sales_invoice.json  stock_entry_detail.json
methods/methods/docevents/: bill_of_entry.py  create_custom_field.py  purchase_invoice.py  stock_entry.py
methods/methods/doctype/customer_group_table/: customer_group_table.json  customer_group_table.py
methods/methods/doctype/pdf_invoice_item/: pdf_invoice_item.json  pdf_invoice_item.py
methods/methods/doctype/pdf_invoice_upload/: pdf_invoice_upload.js  pdf_invoice_upload.json  pdf_invoice_upload.py  test_pdf_invoice_upload.py
methods/methods/doctype/supplier_group_multiselect/: supplier_group_multiselect.json  supplier_group_multiselect.py
methods/methods/doctype/supplier_multiselect/: supplier_multiselect.json  supplier_multiselect.py
methods/methods/override/: bank_clearance.py
methods/methods/page/spool_file_creation_/: __init__.py  spool_file_creation_.js  spool_file_creation_.json
methods/patches/: cleate_property_setter.py  create_field_for_send_email.py  create_filters_in_buying_settings.py
methods/public/js/: auto_email_report.js  bill_of_entry.js  delivery_note.js  general_ledger.html  methods.bundle.js  purchase_receipt.js  sales_order.js  stock_entry.js
(+14 files in other folders)
